--- a/index.html
+++ b/index.html
@@ -502,21 +502,21 @@
                 <p style="font-size: 1rem; margin-bottom: 15px; font-weight: bold;">Escolha a versão para o seu dispositivo:</p>
                 <div class="apk-download-options">
                     <div class="download-item">
-                        <a href="https://drive.google.com/file/d/1XenRbKm79qF7Y0zrST1h8GHd1ni1N8Bz/view?usp=drive_link" class="btn-apk" download>
+                        <a href="https://www.dropbox.com/scl/fi/m9p7sm33cp2cam7d2ws31/Kiponflow-64-bit.apk?rlkey=xtdngoehc0x33cp7caas4an6b&st=cuoh0xa7&dl=0" class="btn-apk" download>
                             <i class="fab fa-android"></i>
                             Baixar APK (64-bit)
                         </a>
                         <p class="apk-description">Recomendado para celulares modernos.</p>
                     </div>
                     <div class="download-item">
-                        <a href="https://drive.google.com/file/d/1oGTCnmgj6ww2yPlQVRYssxARf2OOZXBH/view?usp=drive_link" class="btn-apk btn-apk-secondary" download>
+                        <a href="https://www.dropbox.com/scl/fi/lw8z4evxkozg16dtyfw02/Kiponflow-32-bit.apk?rlkey=8mgw5ydf8isy91h3fo6oo8jbh&st=rx3itden&dl=0" class="btn-apk btn-apk-secondary" download>
                             <i class="fab fa-android"></i>
                             Baixar APK (32-bit)
                         </a>
                         <p class="apk-description">Para celulares mais antigos.</p>
                     </div>
                     <div class="download-item">
-                        <a href="https://drive.google.com/file/d/1YtIojcbQwOXDDhHKNL8n8rDNbhE7og5k/view?usp=drive_link" class="btn-apk btn-apk-tertiary" download>
+                        <a href="https://www.dropbox.com/scl/fi/fv7ljo0i8wuekv1w67n8b/Kiponflow-x86-64.apk?rlkey=dee953jdslv8ffyjcd5io52q3&st=c1lcu2e2&dl=0" class="btn-apk btn-apk-tertiary" download>
                             <i class="fas fa-laptop-code"></i> Baixar APK (x86_64)
                         </a>
                         <p class="apk-description">Para emuladores ou dispositivos específicos (ex: Chromebooks).</p>
@@ -615,20 +615,20 @@
 
             <div class="cta-download-options">
                 <div class="download-item">
-                    <a href="https://drive.google.com/file/d/1XenRbKm79qF7Y0zrST1h8GHd1ni1N8Bz/view?usp=drive_link" class="btn-apk" download>
+                    <a href="https://www.dropbox.com/scl/fi/m9p7sm33cp2cam7d2ws31/Kiponflow-64-bit.apk?rlkey=xtdngoehc0x33cp7caas4an6b&st=cuoh0xa7&dl=0" class="btn-apk" download>
                         <i class="fas fa-download"></i>
                         Download APK (64-bit)
                     </a>
                     <p class="apk-description">Celulares modernos (Recomendado)</p>
                 </div>
                 <div class="download-item">
-                    <a href="https://drive.google.com/file/d/1oGTCnmgj6ww2yPlQVRYssxARf2OOZXBH/view?usp=drive_link" class="btn-apk btn-apk-alt" download> <i class="fas fa-download"></i>
+                    <a href="https://www.dropbox.com/scl/fi/lw8z4evxkozg16dtyfw02/Kiponflow-32-bit.apk?rlkey=8mgw5ydf8isy91h3fo6oo8jbh&st=rx3itden&dl=0" class="btn-apk btn-apk-alt" download> <i class="fas fa-download"></i>
                         Download APK (32-bit)
                     </a>
                     <p class="apk-description">Celulares mais antigos</p>
                 </div>
                 <div class="download-item">
-                    <a href="https://drive.google.com/file/d/1YtIojcbQwOXDDhHKNL8n8rDNbhE7og5k/view?usp=drive_link" class="btn-apk btn-apk-alt" download>
+                    <a href="https://www.dropbox.com/scl/fi/fv7ljo0i8wuekv1w67n8b/Kiponflow-x86-64.apk?rlkey=dee953jdslv8ffyjcd5io52q3&st=c1lcu2e2&dl=0" class="btn-apk btn-apk-alt" download>
                         <i class="fas fa-download"></i>
                         Download APK (x86_64)
                     </a>
