--- a/index.html
+++ b/index.html
@@ -501,19 +501,19 @@
                 <p>O sucesso nos estudos não é sobre trabalhar mais, é sobre trabalhar de forma mais inteligente. Organize, planeje e conquiste com nosso app.</p>
                 <p style="font-size: 1rem; margin-bottom: 15px; font-weight: bold;">Escolha a versão para o seu dispositivo:</p>
                 <div class="apk-download-options">
-                    <div class="download-item">
+                    <!--<div class="download-item">
                         <a href="https://www.dropbox.com/scl/fi/gqawgxly75oxjtt0aezoz/Kiponflow-64-bit.apk?rlkey=gbf8u3u92um1xxkox4n1tfq7a&st=gnh54slx&dl=0" class="btn-apk" download>
                             <i class="fab fa-android"></i>
                             Baixar APK (64-bit)
                         </a>
                         <p class="apk-description">Recomendado para celulares modernos.</p>
-                    </div>
+                    </div>-->
                     <div class="download-item">
                         <a href="https://www.dropbox.com/scl/fi/wsumtvv7wawaelppjzu9e/Kiponflow-32-bit.apk?rlkey=85gfhbjl9wvn2uhnt03chr9rh&st=86d17txw&dl=0" class="btn-apk btn-apk-secondary" download>
                             <i class="fab fa-android"></i>
-                            Baixar APK (32-bit)
+                            Baixar APK
                         </a>
-                        <p class="apk-description">Para celulares mais antigos.</p>
+                        <p class="apk-description">Recomendado</p>
                     </div>
                     <div class="download-item">
                         <a href="https://www.dropbox.com/scl/fi/6y8xrhvue66abcmuo7kcv/Kiponflow-x86-64.apk?rlkey=1pzkp8eeu67takspekbyy4y1w&st=67exr5g0&dl=0" class="btn-apk btn-apk-tertiary" download>
@@ -614,18 +614,18 @@
             <p style="font-size: 1rem; margin-bottom: 25px; color: var(--white-color); font-weight: bold;">Escolha a versão compatível com seu aparelho:</p>
 
             <div class="cta-download-options">
-                <div class="download-item">
+                <!--<div class="download-item">
                     <a href="https://www.dropbox.com/scl/fi/gqawgxly75oxjtt0aezoz/Kiponflow-64-bit.apk?rlkey=gbf8u3u92um1xxkox4n1tfq7a&st=gnh54slx&dl=0" class="btn-apk" download>
                         <i class="fas fa-download"></i>
                         Download APK (64-bit)
                     </a>
                     <p class="apk-description">Celulares modernos (Recomendado)</p>
-                </div>
+                </div>-->
                 <div class="download-item">
                     <a href="https://www.dropbox.com/scl/fi/wsumtvv7wawaelppjzu9e/Kiponflow-32-bit.apk?rlkey=85gfhbjl9wvn2uhnt03chr9rh&st=86d17txw&dl=0" class="btn-apk btn-apk-alt" download> <i class="fas fa-download"></i>
-                        Download APK (32-bit)
+                        Download APK
                     </a>
-                    <p class="apk-description">Celulares mais antigos</p>
+                    <p class="apk-description">Recomendado</p>
                 </div>
                 <div class="download-item">
                     <a href="https://www.dropbox.com/scl/fi/6y8xrhvue66abcmuo7kcv/Kiponflow-x86-64.apk?rlkey=1pzkp8eeu67takspekbyy4y1w&st=67exr5g0&dl=0" class="btn-apk btn-apk-alt" download>
