Google play feito

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         }
         .quote-section blockquote::before,
         .quote-section blockquote::after {
-            content: "“";
+            content: """;
             font-size: 6rem;
             color: var(--primary-color);
             opacity: 0.6;
@@ -225,7 +225,7 @@
             left: 0;
         }
         .quote-section blockquote::after {
-            content: "”";
+            content: """;
             bottom: -50px;
             right: 0;
         }
@@ -499,27 +499,21 @@
             <div class="hero-text">
                 <h1>Afie seu Machado Acadêmico.</h1>
                 <p>O sucesso nos estudos não é sobre trabalhar mais, é sobre trabalhar de forma mais inteligente. Organize, planeje e conquiste com nosso app.</p>
-                <p style="font-size: 1rem; margin-bottom: 15px; font-weight: bold;">Escolha a versão para o seu dispositivo:</p>
+                <p style="font-size: 1rem; margin-bottom: 15px; font-weight: bold;">Disponível agora:</p>
                 <div class="apk-download-options">
-                    <!--<div class="download-item">
-                        <a href="https://www.dropbox.com/scl/fi/gqawgxly75oxjtt0aezoz/Kiponflow-64-bit.apk?rlkey=gbf8u3u92um1xxkox4n1tfq7a&st=gnh54slx&dl=0" class="btn-apk" download>
-                            <i class="fab fa-android"></i>
-                            Baixar APK (64-bit)
-                        </a>
-                        <p class="apk-description">Recomendado para celulares modernos.</p>
-                    </div>-->
                     <div class="download-item">
-                        <a href="https://www.dropbox.com/scl/fi/wsumtvv7wawaelppjzu9e/Kiponflow-32-bit.apk?rlkey=85gfhbjl9wvn2uhnt03chr9rh&st=86d17txw&dl=0" class="btn-apk btn-apk-secondary" download>
-                            <i class="fab fa-android"></i>
-                            Baixar APK
+                        <a href="https://play.google.com/store/apps/details?id=com.utalahari.kiponflow" class="btn-apk btn-apk-secondary" target="_blank">
+                            <i class="fab fa-google-play"></i>
+                            Baixar na Play Store
                         </a>
-                        <p class="apk-description">Recomendado</p>
+                        <p class="apk-description">Versão oficial da Google Play Store</p>
                     </div>
                     <div class="download-item">
-                        <a href="https://www.dropbox.com/scl/fi/6y8xrhvue66abcmuo7kcv/Kiponflow-x86-64.apk?rlkey=1pzkp8eeu67takspekbyy4y1w&st=67exr5g0&dl=0" class="btn-apk btn-apk-tertiary" download>
-                            <i class="fas fa-laptop-code"></i> Baixar APK (x86_64)
+                        <a href="https://play.google.com/apps/testing/com.utalahari.kiponflow" class="btn-apk btn-apk-tertiary" target="_blank">
+                            <i class="fas fa-flask"></i>
+                            Teste Beta (Web)
                         </a>
-                        <p class="apk-description">Para emuladores ou dispositivos específicos (ex: Chromebooks).</p>
+                        <p class="apk-description">Acesse a versão de teste pelo navegador</p>
                     </div>
                 </div>
             </div>
@@ -611,37 +605,26 @@
         <div class="container">
             <h2>Pronto para Cortar Árvores?</h2>
             <p>Chega de esforço desperdiçado. Baixe o Kiponflow e comece a estudar de forma mais eficaz hoje mesmo!</p>
-            <p style="font-size: 1rem; margin-bottom: 25px; color: var(--white-color); font-weight: bold;">Escolha a versão compatível com seu aparelho:</p>
 
             <div class="cta-download-options">
-                <!--<div class="download-item">
-                    <a href="https://www.dropbox.com/scl/fi/gqawgxly75oxjtt0aezoz/Kiponflow-64-bit.apk?rlkey=gbf8u3u92um1xxkox4n1tfq7a&st=gnh54slx&dl=0" class="btn-apk" download>
-                        <i class="fas fa-download"></i>
-                        Download APK (64-bit)
-                    </a>
-                    <p class="apk-description">Celulares modernos (Recomendado)</p>
-                </div>-->
                 <div class="download-item">
-                    <a href="https://www.dropbox.com/scl/fi/wsumtvv7wawaelppjzu9e/Kiponflow-32-bit.apk?rlkey=85gfhbjl9wvn2uhnt03chr9rh&st=86d17txw&dl=0" class="btn-apk btn-apk-alt" download> <i class="fas fa-download"></i>
-                        Download APK
+                    <a href="https://play.google.com/store/apps/details?id=com.utalahari.kiponflow" class="btn-apk" target="_blank">
+                        <i class="fab fa-google-play"></i>
+                        Download na Play Store
                     </a>
-                    <p class="apk-description">Recomendado</p>
+                    <p class="apk-description">Versão oficial disponível na Google Play Store</p>
                 </div>
                 <div class="download-item">
-                    <a href="https://www.dropbox.com/scl/fi/6y8xrhvue66abcmuo7kcv/Kiponflow-x86-64.apk?rlkey=1pzkp8eeu67takspekbyy4y1w&st=67exr5g0&dl=0" class="btn-apk btn-apk-alt" download>
-                        <i class="fas fa-download"></i>
-                        Download APK (x86_64)
+                    <a href="https://play.google.com/apps/testing/com.utalahari.kiponflow" class="btn-apk btn-apk-alt" target="_blank">
+                        <i class="fas fa-flask"></i>
+                        Acesso Beta (Web)
                     </a>
-                    <p class="apk-description">Emuladores / Dispositivos x86</p>
+                    <p class="apk-description">Teste a versão beta diretamente no navegador</p>
                 </div>
             </div>
 
             <p style="margin-top: 30px; font-size: 0.9rem; opacity: 0.8;">
-                Não sabe qual escolher? A versão <strong>64-bit</strong> é a mais comum para celulares fabricados nos últimos anos.
-                Se tiver dúvidas, tente primeiro a de 64-bit.
-            </p>
-            <p style="font-size: 0.8rem; opacity: 0.7; margin-top: 10px;">
-                (Disponível para Android via download direto)
+                Recomendamos baixar pela <strong>Play Store</strong> para ter sempre a versão mais atualizada e segura.
             </p>
         </div>
     </section>
