Google play feito

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         }
         .quote-section blockquote::before,
         .quote-section blockquote::after {
-            content: """;
+            content: "";
             font-size: 6rem;
             color: var(--primary-color);
             opacity: 0.6;
@@ -225,7 +225,7 @@
             left: 0;
         }
         .quote-section blockquote::after {
-            content: """;
+            content: "";
             bottom: -50px;
             right: 0;
         }
